<resources>
    <string name="app_name">AStA Shop</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello World!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toast_button_text">Toast</string>
    <string name="qr" />
    <string name="startseite" />
    <string name="profil" />
    <string name="qr_code_scannen">QR-Code scannen</string>
    <string name="profil_anzeigen">Profil anzeigen</string>
    <string name="startseite_anzeigen">Startseite anzeigen</string>
    <string name="produkt_hinzuf_gen">Produkt hinzufügen:</string>
    <string name="produktname">Produktname:</string>
    <string name="preis">Preis:</string>
    <string name="menge">Menge:</string>
    <string name="allergene">Allergene:</string>
    <string name="koscher">Koscher</string>
    <string name="halal">Halal</string>
    <string name="vegetarisch">Vegetarisch</string>
    <string name="vegan">Vegan</string>
    <string name="zutaten_bearbeiten">Zutaten bearbeiten</string>
    <string name="foto_hochladen">Foto hochladen</string>
    <string name="best_tigen">Bestätigen</string>
    <string name="vorhanden_produktnamen">Vorhanden Produktnamen</string>
    <string name="preis_nur_in_euro">Preis nur in Euro</string>
    <string name="g_ltige_menge">Gültige Menge</string>
    <string name="vorhandene_allergie">Vorhandene Allergie</string>
    <string name="startseite2">Startseite</string>
    <string name="benutzerprofil">Benutzerprofil</string>
    <string name="qr_code">QR-Code</string>
    <string name="zutaten_ausw_hlen">Zutaten auswählen</string>
    <string name="foto_hochladen_str">Foto hochladen</string>
</resources>