<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".FirstFragment">

    <ImageButton
        android:id="@+id/qrButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/qr_code_scannen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qr"
        app:tint="#000000" />

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/profil_anzeigen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log_in_profil_anzeigen" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/startseite_anzeigen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/profile_button"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toEndOf="@+id/qrButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/startseite" />

    <ImageButton
        android:id="@+id/produkthinzufuegen"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/produkt_hinzuf_gen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/profile_button"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toEndOf="@+id/qrButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/produkthinzu" />

    <TextView
        android:id="@+id/textView01"
        android:layout_width="218dp"
        android:layout_height="29dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="570dp"
        android:text="@string/foto_hochladen_str"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />


</androidx.constraintlayout.widget.ConstraintLayout>