<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".ProfilActivity">

    <ImageButton
        android:id="@+id/qrButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/qr_code_scannen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qr"
        app:tint="#000000" />

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/profil_anzeigen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log_in_profil_anzeigen" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/startseite_anzeigen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/profile_button"
        app:layout_constraintStart_toEndOf="@+id/qrButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/startseite" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/benutzerprofil"
        android:layout_marginStart="146dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="570dp"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>