<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".FirstFragment">

    <FrameLayout
        android:id="@+id/contentFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/qrButton"
        android:layout_width="79dp"
        android:layout_height="78dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/qr_code_scannen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qr"
        app:tint="#000000" />

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="79dp"
        android:layout_height="83dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/profil_anzeigen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log_in_profil_anzeigen" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/startseite_anzeigen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/profile_button"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/qrButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/startseite" />

    <ImageButton
        android:id="@+id/produkthinzufuegen"
        android:layout_width="79dp"
        android:layout_height="78dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/produkt_hinzuf_gen"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/profile_button"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toEndOf="@+id/qrButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/produkthinzu" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="119dp"
        android:layout_height="38dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="570dp"
        android:text="@string/startseite2"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>